# specrelay

./: .dockerignore  .gitignore  PROJECT_MEMORY.md  README.md  README.zh-CN.md
.github/workflows/: desktop-package.yml  frontend.yml  go-postgres.yml
api/: openapi.yaml
backend/: Dockerfile  go.mod  go.sum
backend/cmd/specrelay/: main.go
backend/internal/agent/: agent.go  agent_test.go  process_unix.go  process_windows.go
backend/internal/app/: discussion.go  discussion_test.go  feedback_test.go  git_checkpoint.go  git_checkpoint_test.go  service.go  sessions.go  workspace.go  workspace_test.go
backend/internal/config/: config.go
backend/internal/domain/: models.go  models_test.go
backend/internal/events/: broker.go  broker_test.go
backend/internal/httpapi/: agent_runs_test.go  auth.go  auth_test.go  directories_test.go  execution_context_test.go  server.go
backend/internal/jobqueue/: worker.go
backend/migrations/: 001_initial.sql
deploy/: .env.example  docker-compose.production.yml  docker-compose.yml
desktop/: .gitignore  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/: postgres.compose.yml
desktop/src-tauri/src/: main.rs
docs/: go-postgres-architecture.md
frontend/: index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: package-desktop.sh
scripts/dev/: start-backend.sh
(+62 files in other folders)
