[package]
name = "specrelay-desktop"
version = "1.0.0"
description = "SpecRelay desktop launcher"
authors = ["SpecRelay contributors"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", default-features = false, features = ["wry", "compression", "dynamic-acl", "x11"] }
tauri-plugin-shell = "2.3.4"
uuid = { version = "1.18.1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
